@@ -1,36 +1,37 @@
 import java.util.*;
-
 public class Snake {
 
-    public List<Cell> snake = new LinkedList();
-    public ArrayDeque<Cell> eaten_fruit = new ArrayDeque<>();
+    public LinkedList<Point> snake = new LinkedList();
+
+
 
     Snake(Field field){
-        for (int i = 1; i < 5; i++) {
-            snake.add(field.field[i][1]);
-            field.field[i][1].type = Type.type.SNAKE;
+        for (int x = 1; x < 5; x++) {
+            Point point =new Point(x, 1);
+            field.stateCell.put(point, type.snake);
+            snake.add(point);
         }
     }
 
 
 
-    public void addToTail(int x, int y, Field field){
-        snake.add(0, field.field[x][y]);
-        snake.get(0).type = Type.type.SNAKE;
+    public void addToTail(Point point, Field field){
+        snake.addFirst(point);
+        field.stateCell.put(point, type.snake);
     }
 
-    public void addToHead(int x, int y, Field field){
-        snake.add(snake.size(), field.field[x][y]);
-        snake.get(snake.size() - 1).type = Type.type.SNAKE;
+    public void addToHead(Point point, Field field){
+        snake.addLast(point);
+        field.stateCell.put(point, type.snake);
     }
 
     public void cutTail(Field field){
-        snake.get(0).type = Type.type.VOID;
-        snake.remove(0);
+        field.stateCell.remove(snake.getFirst());
+        snake.removeFirst();
     }
 
-    public void move(int x, int y, Field field){
-        addToHead(x, y, field);
+    public void move(Point point, Field field){
+        addToHead(point, field);
         cutTail(field);
     }
 }
